<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.projetos.android.EnderecoDetalheActivity" >

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="always|withText"/>

</menu>
