<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.projetos.android.EnderecoActivity" >

    <item 
        android:id="@+id/filter"
        android:title="@string/action_filter"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item 
        android:id="@+id/action_clear_filter"
        android:orderInCategory="90"
        android:title="@string/action_clear_filter"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="always|withText" />
    
    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always|withText"/>

</menu>
